adds some edits to lit review

--- a/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
+++ b/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
@@ -592,4 +592,26 @@
   publisher = {Wiley Online Library},
 }
 
+@Article{frank2012measuring,
+  author    = {Frank, Michael C and Vul, Edward and Saxe, Rebecca},
+  title     = {Measuring the Development of Social Attention Using Free-Viewing},
+  journal   = {Infancy},
+  year      = {2012},
+  volume    = {17},
+  number    = {4},
+  pages     = {355--375},
+  publisher = {Wiley Online Library},
+}
+
+@Article{frank2009development,
+  author    = {Frank, Michael C and Vul, Edward and Johnson, Scott P},
+  title     = {Development of infants’ attention to faces during the first year},
+  journal   = {Cognition},
+  year      = {2009},
+  volume    = {110},
+  number    = {2},
+  pages     = {160--170},
+  publisher = {Elsevier},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
