--- a/analysis/soc_ref_category_paper/soc_ref_category_paper.tex
+++ b/analysis/soc_ref_category_paper/soc_ref_category_paper.tex
@@ -76,7 +76,7 @@
 \fi
 \hypersetup{breaklinks=true,
             pdfauthor={},
-            pdftitle={Children's sensitivity to graded uncertainty},
+            pdftitle={Children's social information-seeking as an index of sensitivity to graded uncertainty},
             colorlinks=true,
             citecolor=blue,
             urlcolor=blue,
@@ -107,9 +107,10 @@
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
 % Essential manuscript parts
-  \title{Children's sensitivity to graded uncertainty}
+  \title{Children's social information-seeking as an index of sensitivity to
+graded uncertainty}
 
-  \shorttitle{Sensitivity to graded uncertainty}
+  \shorttitle{Children's sensitivity to graded uncertainty}
 
 
   \author{Benjamin E. deMayo\textsuperscript{1}}
@@ -132,8 +133,8 @@
 show an emerging ability to monitor their own epistemic uncertainty.
 However, little is known about children's sensitivity to graded
 uncertainty and how they adjust their information-seeking behaviors in
-situations other than those of complete certainty or complete
-uncertainty. Here, I investigated children's spontaneous social
+situations other than those of complete knowledge and complete
+ignorance. Here, I investigated children's spontaneous social
 information-gathering behaviors under various levels of graded category
 uncertainty. Children ages 3-5 (n = 30) were asked to categorize images
 of creatures which varied in their distance from two prototype images,
@@ -144,7 +145,7 @@ trial-by-trial basis. Children looked at the experimenter at the same
 rate regardless of an item's category ambiguity, suggesting that they
 did not adjust their information-seeking based on graded category
 uncertainty.}
-  \keywords{information gathering; graded uncertainty; category discrimination \\
+  \keywords{information gathering; uncertainty monitoring; category discrimination \\
 
     \indent Word count: X
   }
@@ -205,12 +206,13 @@ behaviors are modulated by graded uncertainty.
 
 Below, I outline research that highlights differing accounts of
 children's metacognition which show that children both engage in
-spontaneous information-seeking behaviors to explore their environments
-actively and guide their own learning, and that children also have a
-limited capacity to explicitly report on their own uncertainty. I then
-review studies demonstrating children's ability to seek information
-selectively from social partners who could provide helpful information
-when uncertainty is high.
+spontaneous information-seeking behaviors in response to epistemic
+uncertainty in order to explore their environments actively and guide
+their own learning, and that children also have a limited capacity to
+explicitly report on their own uncertainty. I then review studies
+demonstrating children's ability to seek information selectively from
+social partners who could provide helpful information when uncertainty
+is high.
 
 \subsection{Uncertainty Monitoring and Active Learning in Early
 Childhood}\label{uncertainty-monitoring-and-active-learning-in-early-childhood}
@@ -230,8 +232,11 @@ think?}, \enquote{Do you have any questions?} and \enquote{Did I tell
 you everything you need to know to play the game?} In this study,
 Markman found that the younger children required more prompts before
 seeking out additional information, which she argues is an indication
-that young elementary school children lack the capacity to introspect on
-their own non-understanding.
+that young elementary school children do not engage in
+\enquote{constructive processing,}; that is, they process the
+instructions being given by the experimenter superficially without
+executing these instructions mentally, and are consequently unaware of
+gaps in their own knowledge.
 
 Similarly, Flavell, Speer, Green, August, \& Whitehurst (1981) asked
 kindergarten and second-grade children to reconstruct block structures
@@ -240,37 +245,35 @@ confederate, which were not sufficiently clear to successfully recreate
 the structure. The researchers found that older children were more
 likely to indicate the need for additional clarifying information by
 replaying the tape, asking questions explicitly, or generally looking
-puzzled, while kindergarteners typically did not display these
-behaviors. This showed that older children were more adept at seeking
-information explicitly, but it also demonstrated that younger children
-were less likely to spontaneously seek information from the environment
-(for example, by replaying the tape). Below, I discuss later research
-which shows that young children do engage in spontaneous
-information-gathering, a finding which is in conflict with this early
-study, indicating that perhaps recognizing insufficient instructions is
-more demanding for children than monitoring epistemic uncertainty in
-other contexts such as incomplete memory. While these studies suggest
-that young children struggle to articulate their uncertainty through
-explicit responses, these and other initial investigations of children's
-uncertainty monitoring required verbal responses from children, a task
-demand which may systematically underestimate children's metacognitive
-abilities.
+puzzled. Conversely, kindergarteners typically did not display these
+behaviors. This result demonstrated that older children were more adept
+at seeking information explicitly, but it also showed that younger
+children were less likely to spontaneously seek information from the
+environment (for example, by replaying the tape).
 
-More recent research has examined children's metacognition without
-requiring children to respond verbally. When asked to report confidence
-in their answers on a memory task, 3-year-olds were equally confident
-about correct and incorrect responses, while 4- and 5-year-olds showed a
-more adult-like pattern of lower confidence for incorrect
-responses(Hembacher \& Ghetti, 2014). In a perceptual identification
-task, 3- to 5-year-olds reported being less confident when they provided
-incorrect responses, although overall they were still overconfident
-(Coughlin, Hembacher, Lyons, \& Ghetti, 2015). However, the possibility
-exists that even these studies underestimate children's ability to
-monitor their own uncertainty because they require children to
-explicitly report their confidence (even if not in an open-ended verbal
-response), and that children can act on their own uncertainty before
-they can communicate it through explicit responses or reflect on it
-consciously.
+Rather than measure children's spontaneous information-seeking
+behaviors, some more recent research has gauged children's uncertainty
+monitoring capacities by asking them to report on their decision
+confidence in various contexts. When asked to report confidence in their
+answers on a memory task, 3-year-olds were equally confident about
+correct and incorrect responses, while 4- and 5-year-olds showed a more
+adult-like pattern of lower confidence for incorrect responses(Hembacher
+\& Ghetti, 2014). In a perceptual identification task, 3- to 5-year-olds
+reported being less confident when they provided incorrect responses,
+although overall they were still overconfident (Coughlin, Hembacher,
+Lyons, \& Ghetti, 2015). In order to avoid requiring a verbal response
+from children, which may obscure children's capacity to reflect on their
+own ignorance, these studies used a pictorial confidence scale when
+prompting children to report on their uncertainty. However, the
+possibility exists that even these studies underestimate children's
+ability to monitor their own uncertainty because they require children
+to explicitly report their confidence (even if not in an open-ended
+verbal response), and that children can act on their own uncertainty
+before they can communicate it through explicit responses or reflect on
+it consciously.
+
+\subsection{Children's Spontaneous Information-seeking
+Behaviors}\label{childrens-spontaneous-information-seeking-behaviors}
 
 In contrast to the explicit confidence measurements used in the studies
 discussed above, some research has shown that children engage in
@@ -279,30 +282,45 @@ are not prompted explicitly by an experimenter -- more often when they
 are faced with uncertainty. These studies demonstrate that children
 engage in active learning, in which the learner decides what information
 they want to be exposed to, rather than having the decision made for
-them by a teacher (Gureckis \& Markant, 2012). In one study, when
-2-year-old children were asked to find a sticker hidden inside of one of
-several tubes, they peeked inside the tubes more when they had not seen
-the experimenter place the sticker, indicating that they spontaneously
-sought out more information when deprived of sufficient information to
-make a decision (Call \& Carpenter, 2001). In another study, young
-children were shown a group of toys that either differed in their color
-or in how they felt to the touch (Robinson, Haigh, \& Pendle, 2008). All
-of the toys were put into a bag by the experimenter, who mixed them up
-and then picked out a toy. In the condition where the experimenter put
-the toy on the table and ask the child, \enquote{Which one is it?},
-children more often reached out and touched the toy more when its
-distinctive quality was texture than when it was color. In contrast,
-when the experimenter handed the object to the child, thus giving the
-child visual and tactile access to the toy simultaneously, children
-still correctly were able to identify whether the toy was soft or hard,
-but unable to accurately report that they had arrived at this conclusion
-by touching the toy. This result demonstrates that children interact
-with the environment using sensory modalities that will most effectively
-fill in gaps in uncertainty, even if they are unable to explicitly
-report doing so.
+them by a teacher (Gureckis \& Markant, 2012). While early research on
+children's metacognitive development also measured unprompted
+information-seeking behaviors and found that younger children do not
+engage in spontaneous information-seeking, these early studies often
+required an explicit verbal response from children, as in Markman
+(1977). Furthermore, studies such as Flavell, et al. (1981) showed
+children's deficit in realizing when instructions are insufficient,
+which may be more difficult for children than realizing they lack other
+types of knowledge, such as memory of an event. Specifically, it may be
+particulary difficult for children to realize they lack understanding or
+knowledge of instructions, since doing so requires that children realize
+that they may encounter an obstacle in the future that may not be
+immediately apparent to them at the moment the instructions are given.
+
+Recent research which at least partially alleviated these task demands
+has found evidence of children's engagement in spontaneous
+information-seeking. In one study, when 2-year-old children were asked
+to find a sticker hidden inside of one of several tubes, they peeked
+inside the tubes more when they had not seen the experimenter place the
+sticker, indicating that they spontaneously sought out more information
+when deprived of sufficient information to make a decision (Call \&
+Carpenter, 2001). In another study, young children were shown a group of
+toys that either differed in their color or in how they felt to the
+touch (Robinson, Haigh, \& Pendle, 2008). All of the toys were put into
+a bag by the experimenter, who mixed them up and then picked out a toy.
+In the condition where the experimenter put the toy on the table and ask
+the child, \enquote{Which one is it?}, children more often reached out
+and touched the toy more when its distinctive quality was texture than
+when it was color. In contrast, when the experimenter handed the object
+to the child, thus giving the child visual and tactile access to the toy
+simultaneously, children still correctly were able to identify whether
+the toy was soft or hard, but unable to accurately report that they had
+arrived at this conclusion by touching the toy. This result demonstrates
+that children interact with the environment using sensory modalities
+that will most effectively fill in gaps in uncertainty, even if they are
+unable to explicitly report doing so.
 
 Schulz and Bonawitz (2007) also found that when young children were
-presented with a causally-confounded toy (i.e.,, a toy that exhibited a
+presented with a causally-confounded toy (i.e., a toy that exhibited a
 behavior whose causal structure could not be deduced) and could choose
 between playing with that toy or a novel toy, they chose to further
 explore the causally-confounded toy. However, when the choice was
@@ -319,25 +337,28 @@ flexibly adjust their actions accordingly.
 Gathering}\label{childrens-social-referencing-and-social-information-gathering}
 
 Taken together, these studies provide compelling evidence that children
-choose to seek more information specifically to resolve uncertainty. In
-this study, I examine the selectivity of children's spontaneous searches
-for social information. In order to do this, children must consider
-other people to be helpful sources of information.
+choose to seek more information specifically to resolve uncertainty, and
+that they sample sources of evidence that are most likely to provide
+disambiguating information. In this study, I examine the selectivity of
+children's spontaneous sampling social information. In order to do this,
+children must consider other people to be helpful sources of
+information.
 
 Evidence in a number of experimental contexts suggests that infants and
 young children reference trusted adults for disambiguating information
-in situations of variable outcomes and potential danger. Sorce, Emde,
+in situations of uncertain outcomes and potential danger. Sorce, Emde,
 Campos, and Klinnert (1985) showed that infants look to their mothers to
 determine whether it is safe to proceed crawling over a
 \enquote{visual-cliff}, a glass table that is actually safe to walk on
-but which looks like a daunting drop-off to an infant . When infants'
+but which looks like a daunting drop-off to an infant. When infants'
 caregivers showed an encouraging expression, infants tended to crawl
 onto the glass surface, whereas they avoided doing so when their mother
 showed a frightened facial expression. Other studies have shown that
 children use caregivers' emotional appraisals of novel toys (Feinman,
 1982; Hornik, Risenhoover, \& Gunnar, 1987; M. Klinnert, 1981) and
 recently-met strangers (Feinman \& Lewis, 1983) (Feinman \& Lewis, 1983)
-to inform their own interactions with their environments.
+to inform how they interact with newly-encountered aspects of their
+environments.
 
 The above studies provide strong evidence that children, starting in the
 early stages of infancy, use others' appraisals of the world around them
@@ -345,44 +366,49 @@ to disambiguate uncertainty about the safety or physical affordances of
 the environment. However, there is only limited prior research that
 sheds light on whether children's searches for social information are
 driven by gaps in the child's knowledge and the child's own awareness of
-these gaps. While prior research has demonstrated that children
-selectively seek out social information in certain contexts (i.e., ones
-in which their physical safety is in question), it is unclear to what
-extent children will engage in these information-gathering behaviors
-across other cognitive domains, particularly given the research
-discussed above which demonstrates that young children struggle to
-report their own ignorance. If uncertainty about the world did not play
-a role in children's decision to gather information from the people
-around then, children would not be selective in when they seek
-information. Below, I review studies that demonstrate that children are
-selective when choosing their informants, and that they more heavily
-weight social information in situations of uncertainty.
+these gaps. There are several reasons to suspect that children may be
+less selective with their social information-seeking than they are with
+information-seeking in non-social contexts. Some forms of social
+information-seeking, such as looking at others' faces, are less costly
+than other forms of manual exploration of the environment such as
+tactile play, in that they may require less time and cognitive
+resources. Additionally, social information may be sufficiently salient
+such that children sample it regardless of the uncertainty associated
+with a particular situation. This is particularly plausible given
+research which demonstrates that children focus more attention to faces
+and other socially informative aspects of complex scenes beginning as
+early as infancy (Frank, Vul, \& Johnson, 2009; Frank, Vul, \& Saxe,
+2012). Nevertheless, prior research has shown that children show
+selectivity in some of their social information-gathering behaviors.
+Below, I review studies that demonstrate that children are selective
+when choosing their informants, and that they more heavily weight social
+information in situations of uncertainty.
 
 \subsection{Selective trust in
 testimony}\label{selective-trust-in-testimony}
 
-Some evidence suggests that young children are selective social learners
-in terms of whom they choose as their informants. Younger children tend
-to use an informant's familiarity as a cue to the trustworthiness of the
-information being offered, but children gradually shift to depend more
-on an informant's demonstrated competence and expertise as they grow
-older (Corriveau \& Harris, 2009; Lucas, Lewis, Pala, Wong, \& Berridge,
-2013). In one study, children were found to generally be proficient at
-tracking the accuracy of an informant's information when explicitly
-probed. Furthermore, children who showed this proficiency selectively
-learned novel object labels from an accurate informant, while those who
-failed to discriminate between an accurate and inaccurate informant
-likewise did not selectively use information from the accurate informant
-(Koenig, Clément, \& Harris, 2004). Children also show selective
-learning from an informant who is uncertain versus one who is clearly
-knowledgeable, and are able to assess someone else's knowledge on a
-particular topic beyond perceptual cues such as facial expression
-(Sabbagh \& Baldwin, 2001). Taken together, these studies show that
-children, beginning in the preschool years, choose their information
-sources in order to maximize knowledge gain. However, it remains unclear
-whether children are similarly selective in their social
-information-gathering depending on their own level of epistemic
-ignorance.
+A large body of evidence suggests that young children are selective
+social learners in terms of whom they choose as their informants.
+Younger children tend to use an informant's familiarity as a cue to the
+trustworthiness of the information being offered, but children gradually
+shift to depend more on an informant's demonstrated competence and
+expertise as they grow older (Corriveau \& Harris, 2009; Lucas, Lewis,
+Pala, Wong, \& Berridge, 2013). In one study, children were found to
+generally be proficient at tracking the accuracy of an informant's
+information when explicitly probed. Furthermore, children who showed
+this proficiency selectively learned novel object labels from an
+accurate informant, while those who failed to discriminate between an
+accurate and inaccurate informant likewise did not selectively use
+information from the accurate informant (Koenig, Clément, \& Harris,
+2004). Children also show selective learning from an informant who
+appears uncertain versus one who is clearly knowledgeable, and are able
+to assess someone else's knowledge on a particular topic beyond
+perceptual cues such as facial expression (Sabbagh \& Baldwin, 2001).
+Taken together, these studies show that children, beginning in the
+preschool years, choose their information sources in order to maximize
+knowledge gain. However, it remains unclear whether children are
+similarly selective in their social information-gathering depending on
+their own level of epistemic ignorance.
 
 \subsection{Selective social learning on the basis of
 uncertainty}\label{selective-social-learning-on-the-basis-of-uncertainty}
@@ -409,25 +435,22 @@ a decision.
 
 While the study by Tamis-LeMonda et al. examined children's selective
 integration of social information, it did not include children's
-solicitations (e.g., through gaze shifts) of social information as a
-dependent measure. This leaves open the question of whether children
-actively seek out information from their social partners when
-uncertainty is high, but some recent work has begun to answer this
-question.
-
-Vredenburgh and Kushnir (2016) investigated children's propensity to ask
-questions when faced with toy-assembly tasks of differential levels of
-difficulty. They found that preschoolers were significantly more likely
-to ask an experimenter for help on tasks that were more difficult for
-them, indicating that children adjust their social information-gathering
-behavior to optimize their learning. Another study examined whether
-infants selectively reference their social partners' gaze when their
-social partners has uttered an ambiguous object label. In this study,
-infants heard an experimenter produce a novel label when there were
-either two or one single objects present (Vaish, Demir, \& Baldwin,
-2011). Infants looked up more at the experimenter when there were two
-objects present and the referent of the experimenter's label was thus
-ambiguous.
+sampling (e.g., through gaze shifts) of social information as a
+dependent measure. Some recent research has begun to address the
+question of whether children actively seek out information from their
+social partners when uncertainty is high. Vredenburgh and Kushnir (2016)
+investigated children's propensity to ask questions when faced with
+toy-assembly tasks of differential levels of difficulty. They found that
+preschoolers were significantly more likely to ask an experimenter for
+help on tasks that were more difficult for them, indicating that
+children adjust their social information-gathering behavior to optimize
+their learning. Another study examined whether infants selectively
+reference their social partners' gaze when their social partners has
+uttered an ambiguous object label (Vaish, Demir, \& Baldwin, 2011). In
+this study, infants heard an experimenter produce a novel label when
+there were either two or one single objects present. Infants looked up
+more at the experimenter when there were two objects present and the
+referent of the experimenter's label was thus ambiguous.
 
 A later study by Hembacher, deMayo, and Frank (2017) sought to replicate
 and extend the finding of Vaish et al. with preschool-aged children. In
@@ -450,15 +473,15 @@ sensitive to states of complete ignorance and complete knowledge, but
 may also be sensitive to intermediate levels of evidence for a
 hypothesis.
 
-\subsection{Sensitivity to intermediate and graded
-uncertainty}\label{sensitivity-to-intermediate-and-graded-uncertainty}
+\subsection{Sensitivity to graded
+uncertainty}\label{sensitivity-to-graded-uncertainty}
 
 Although these results provide initial evidence that children seek
 social information on the basis of graded uncertainty, this study did
 not manipulate ambiguity in a continuous fashion, but rather presented
 children with only one intermediate level of uncertainty between
 complete certainty and complete ambiguity. In many learning contexts
-(i.e., category learning) many more levels of ambiguity exist than
+(i.e., category learning) many more degrees of ambiguity exist than
 complete certainty and complete ambiguity.
 
 It is unclear whether young children are sensitive to intermediate
@@ -466,17 +489,24 @@ levels of epistemic uncertainty, but some research suggests that their
 capacity to monitor graded uncertainty may be limited. One body of
 research has shown that children over the age of 3 can report on states
 of complete ignorance or complete knowledge when asked about an object
-that is being hidden (e.g., Wimmer, Hogrefe, \& Perner, 1988), but
-struggle in partial exposure tasks, in which they are shown several
-objects but are not shown which one is hidden (Kloo \& Rohwer, 2012;
-Sodian \& Wimmer, 1987). However, some studies show that children as
-young as 2 or 3 years old engage in spontaneous information-seeking when
-faced with ambiguity in partial exposure tasks (Call \& Carpenter, 2001;
-Kloo, Rohwer, \& Perner, 2017). In sum, while 3 to 6-year-old children
+that is being hidden (e.g., Wimmer, Hogrefe, \& Perner, 1988), meaning
+that when they are asked if they know which object has been hidden, they
+can accurately report on their own knowledge state if they have seen the
+hiding event (complete certainty) or have not seen any objects at all
+(complete ignorance). However, children of the same age struggle in
+partial exposure tasks, in which they are shown two objects and told one
+of them will be hidden, but are not able to see which one ends up being
+hidden (Kloo \& Rohwer, 2012; Sodian \& Wimmer, 1987). In these
+situations, children tend to erroneously report that they know which
+object has been hidden, even though they had no visual access to the
+hiding event. Some studies, however, show that children as young as 2 or
+3 years old engage in spontaneous information-seeking when faced with
+ambiguity in partial exposure tasks (Call \& Carpenter, 2001; Kloo,
+Rohwer, \& Perner, 2017). In sum, while 3 to 6-year-old children
 struggle to demonstrate explicit or verbal reasoning about their own
-ignorance in partial exposure tasks, some studies demonstrate that may
-engage in spontaneous information-gathering when they lack sufficient
-knowledge to make a decision.
+ignorance in partial exposure tasks, some studies demonstrate that
+children may engage in spontaneous information-gathering when they lack
+sufficient knowledge to make a decision.
 
 Morgan, Laland and Harris (2015) also investigated young children's
 sensitivity to graded uncertainty in a different paradigm. In their
@@ -1057,6 +1087,16 @@ Flavell, J. H., Speer, J. R., Green, F. L., August, D. L., \&
 Whitehurst, G. J. (1981). The development of comprehension monitoring
 and knowledge about communication. \emph{Monographs of the Society for
 Research in Child Development}, 1--65.
+
+\hypertarget{ref-frank2009development}{}
+Frank, M. C., Vul, E., \& Johnson, S. P. (2009). Development of infants'
+attention to faces during the first year. \emph{Cognition},
+\emph{110}(2), 160--170.
+
+\hypertarget{ref-frank2012measuring}{}
+Frank, M. C., Vul, E., \& Saxe, R. (2012). Measuring the development of
+social attention using free-viewing. \emph{Infancy}, \emph{17}(4),
+355--375.
 
 \hypertarget{ref-goupil2016infants}{}
 Goupil, L., Romand-Monnier, M., \& Kouider, S. (2016). Infants ask for
