revisions through methods

--- a/analysis/soc_ref_category_paper/soc_ref_category_paper.tex
+++ b/analysis/soc_ref_category_paper/soc_ref_category_paper.tex
@@ -129,22 +129,21 @@ graded uncertainty}
   }
 
 
-  \abstract{A growing body of research shows that children between 3 and 5 years old
-show an emerging ability to monitor their own epistemic uncertainty.
-However, little is known about children's sensitivity to graded
-uncertainty and how they adjust their information-seeking behaviors in
-situations other than those of complete knowledge and complete
-ignorance. Here, I investigated children's spontaneous social
-information-gathering behaviors under various levels of graded category
-uncertainty. Children ages 3-5 (n = 30) were asked to categorize images
-of creatures which varied in their distance from two prototype images,
-such that uncertainty about category membership was greater when
-distance from a prototype was greater. A live eye-tracking paradigm was
-used to measure children's levels of looking to the experimenter on a
-trial-by-trial basis. Children looked at the experimenter at the same
-rate regardless of an item's category ambiguity, suggesting that they
-did not adjust their information-seeking based on graded category
-uncertainty.}
+  \abstract{Children between 3 and 5 years old show an emerging ability to monitor
+their own epistemic uncertainty. However, little is known about
+children's sensitivity to graded uncertainty and how they adjust their
+information-seeking behaviors in situations other than those of complete
+knowledge and complete ignorance. Here, I investigated children's
+spontaneous social information-gathering behaviors under various levels
+of graded category uncertainty. Children ages 3-5 (n = 30) were asked to
+categorize images of creatures which varied in their distance from two
+prototype images, such that uncertainty about category membership was
+greater when distance from a prototype was greater. A live eye-tracking
+paradigm was used to measure children's levels of looking to the
+experimenter on a trial-by-trial basis. Children looked at the
+experimenter at the same rate regardless of an item's category
+ambiguity, suggesting that they did not adjust their information-seeking
+based on graded category uncertainty.}
   \keywords{information gathering; uncertainty monitoring; category discrimination \\
 
     \indent Word count: X
@@ -176,8 +175,6 @@ uncertainty.}
 
 
 
-\section{Introduction}\label{introduction}
-
 Early in life, children are presented with a great deal of social
 information from which they can learn about the world around them. They
 overhear conversations, are spoken to directly, and interact with other
@@ -200,19 +197,38 @@ understand to what degree children's information-gathering behaviors --
 in this case, gaze to a knowledgeable social partner -- are driven by
 the child's epistemic uncertainty. Building on prior work that suggests
 that children's social gaze may be a sensitive measure of epistemic
-uncertainty (Hembacher \& Frank, n.d.), this study uses a categorization
-task to examine whether children's social information-gathering
-behaviors are modulated by graded uncertainty.
+uncertainty (Hembacher, deMayo, \& Frank, 2017), this study uses a
+categorization task to examine whether children's social
+information-gathering behaviors are modulated by graded uncertainty.
 
-Below, I outline research that highlights differing accounts of
-children's metacognition which show that children both engage in
-spontaneous information-seeking behaviors in response to epistemic
-uncertainty in order to explore their environments actively and guide
-their own learning, and that children also have a limited capacity to
-explicitly report on their own uncertainty. I then review studies
-demonstrating children's ability to seek information selectively from
-social partners who could provide helpful information when uncertainty
-is high.
+Below, I review prior research that demonstrates children's capacities
+to engage in the various preqrequisite behaviors that are necessary to
+show selective social information-seeking on the basis of graded
+uncertainty. I begin by outlining research on children's metacognitive
+development which, due to its reliance on verbal and/or explicit
+responses from children, may have underestimated children's uncertainty
+monitoring capacities. Secondly, I discuss more recent work, which has
+established that children spontaneously seek information, and that they
+do it \emph{selectively}, indicating that this information-seeking
+serves the specific purpose of filling in gaps in uncertainty and
+maximizing the child's learning about the world. I then review work
+pertaining to children's referencing of social partners in situations of
+uncertain outcomes, potential danger, and epistemic uncertainty, and
+cite prior work that demonstrates that children show some patterns of
+selectivity in how they sample information from the social world.
+Finally, I review research concerning children's sensitivity - or
+potentially, lack thereof - towards graded uncertainty, and describe my
+study designed to understand more about children's social
+information-seeking behaviors under conditions of graded uncertainty.
+
+\begin{figure}
+
+{\centering \includegraphics{../images/diagram_lit_review} 
+
+}
+
+\caption{Schematic representation of theoretical background and prior research informing the current study.}\label{fig:schematic}
+\end{figure}
 
 \subsection{Uncertainty Monitoring and Active Learning in Early
 Childhood}\label{uncertainty-monitoring-and-active-learning-in-early-childhood}
@@ -233,10 +249,10 @@ you everything you need to know to play the game?} In this study,
 Markman found that the younger children required more prompts before
 seeking out additional information, which she argues is an indication
 that young elementary school children do not engage in
-\enquote{constructive processing,}; that is, they process the
+\enquote{constructive processing}. That is, they process the
 instructions being given by the experimenter superficially without
-executing these instructions mentally, and are consequently unaware of
-gaps in their own knowledge.
+simulating trying to execute them, and are consequently unaware of gaps
+in their own knowledge.
 
 Similarly, Flavell, Speer, Green, August, \& Whitehurst (1981) asked
 kindergarten and second-grade children to reconstruct block structures
@@ -257,20 +273,25 @@ monitoring capacities by asking them to report on their decision
 confidence in various contexts. When asked to report confidence in their
 answers on a memory task, 3-year-olds were equally confident about
 correct and incorrect responses, while 4- and 5-year-olds showed a more
-adult-like pattern of lower confidence for incorrect responses(Hembacher
-\& Ghetti, 2014). In a perceptual identification task, 3- to 5-year-olds
-reported being less confident when they provided incorrect responses,
-although overall they were still overconfident (Coughlin, Hembacher,
-Lyons, \& Ghetti, 2015). In order to avoid requiring a verbal response
-from children, which may obscure children's capacity to reflect on their
-own ignorance, these studies used a pictorial confidence scale when
-prompting children to report on their uncertainty. However, the
+adult-like pattern of lower confidence for incorrect responses
+(Hembacher \& Ghetti, 2014). In a perceptual identification task, 3- to
+5-year-olds reported being less confident when they provided incorrect
+responses, although overall they were still overconfident (Coughlin,
+Hembacher, Lyons, \& Ghetti, 2015). In order to avoid requiring a verbal
+response from children, which may obscure children's capacity to reflect
+on their own ignorance, these studies used a pictorial confidence scale
+when prompting children to report on their uncertainty. However, the
 possibility exists that even these studies underestimate children's
 ability to monitor their own uncertainty because they require children
 to explicitly report their confidence (even if not in an open-ended
 verbal response), and that children can act on their own uncertainty
 before they can communicate it through explicit responses or reflect on
-it consciously.
+it consciously. Thus, although these studies did not hinge on an verbal
+report of uncertainty from children (which may be the most difficult
+response for a child to provide), they still required children to
+explicitly report on their confidence - a measure of uncertainty which
+may be still more difficult than more implicit, spontaneous and
+action-based measures.
 
 \subsection{Children's Spontaneous Information-seeking
 Behaviors}\label{childrens-spontaneous-information-seeking-behaviors}
@@ -280,13 +301,13 @@ discussed above, some research has shown that children engage in
 spontaneous information-gathering behaviors -- that is, behaviors that
 are not prompted explicitly by an experimenter -- more often when they
 are faced with uncertainty. These studies demonstrate that children
-engage in active learning, in which the learner decides what information
-they want to be exposed to, rather than having the decision made for
-them by a teacher (Gureckis \& Markant, 2012). While early research on
-children's metacognitive development also measured unprompted
-information-seeking behaviors and found that younger children do not
-engage in spontaneous information-seeking, these early studies often
-required an explicit verbal response from children, as in Markman
+engage in \emph{active learning}, in which the learner decides what
+information they want to be exposed to, rather than having the decision
+made for them by a teacher (Gureckis \& Markant, 2012). While early
+research on children's metacognitive development also measured
+unprompted information-seeking behaviors and found that younger children
+do not engage in spontaneous information-seeking, these early studies
+often required an explicit verbal response from children, as in Markman
 (1977). Furthermore, studies such as Flavell, et al. (1981) showed
 children's deficit in realizing when instructions are insufficient,
 which may be more difficult for children than realizing they lack other
@@ -314,8 +335,8 @@ when it was color. In contrast, when the experimenter handed the object
 to the child, thus giving the child visual and tactile access to the toy
 simultaneously, children still correctly were able to identify whether
 the toy was soft or hard, but unable to accurately report that they had
-arrived at this conclusion by touching the toy. This result demonstrates
-that children interact with the environment using sensory modalities
+arrived at this conclusion by touching the toy. Thus, in this particular
+context, children interact with the environment using sensory modalities
 that will most effectively fill in gaps in uncertainty, even if they are
 unable to explicitly report doing so.
 
@@ -356,29 +377,35 @@ onto the glass surface, whereas they avoided doing so when their mother
 showed a frightened facial expression. Other studies have shown that
 children use caregivers' emotional appraisals of novel toys (Feinman,
 1982; Hornik, Risenhoover, \& Gunnar, 1987; M. Klinnert, 1981) and
-recently-met strangers (Feinman \& Lewis, 1983) (Feinman \& Lewis, 1983)
-to inform how they interact with newly-encountered aspects of their
-environments.
+recently-met strangers(Feinman \& Lewis, 1983) to inform how they
+interact with newly-encountered aspects of their environments.
 
 The above studies provide strong evidence that children, starting in the
 early stages of infancy, use others' appraisals of the world around them
-to disambiguate uncertainty about the safety or physical affordances of
-the environment. However, there is only limited prior research that
-sheds light on whether children's searches for social information are
-driven by gaps in the child's knowledge and the child's own awareness of
-these gaps. There are several reasons to suspect that children may be
-less selective with their social information-seeking than they are with
+to resolve uncertainty about the safety or physical affordances of the
+environment. Specifically, they use information gleaned by looking at
+their social partners' faces to guide their own actions. Children,
+beginning in infancy, also reference speakers' gaze in order to
+determine the referent of a utterance, suggesting that looking to
+others' faces is a critical form of minimal infomation-seeking in early
+childhood (D. A. Baldwin, 1991). However, there is only limited prior
+research that sheds light on whether children's searches for social
+information are driven by gaps in the child's knowledge and their own
+awareness of these gaps.
+
+There are several reasons to suspect that children may be less selective
+with their social information-seeking than they are with
 information-seeking in non-social contexts. Some forms of social
-information-seeking, such as looking at others' faces, are less costly
-than other forms of manual exploration of the environment such as
+information-seeking, such as looking at others' faces, may be less
+costly than other forms of manual exploration of the environment such as
 tactile play, in that they may require less time and cognitive
 resources. Additionally, social information may be sufficiently salient
 such that children sample it regardless of the uncertainty associated
-with a particular situation. This is particularly plausible given
+with a particular situation. This possibility is plausible given
 research which demonstrates that children focus more attention to faces
 and other socially informative aspects of complex scenes beginning as
-early as infancy (Frank, Vul, \& Johnson, 2009; Frank, Vul, \& Saxe,
-2012). Nevertheless, prior research has shown that children show
+early as preverbal infancy (Frank, Vul, \& Johnson, 2009; Frank, Vul, \&
+Saxe, 2012). Nevertheless, prior research has shown that children show
 selectivity in some of their social information-gathering behaviors.
 Below, I review studies that demonstrate that children are selective
 when choosing their informants, and that they more heavily weight social
@@ -417,15 +444,15 @@ Despite young children's apparent lack of ability to explicitly report
 their own uncertainty, a few studies indicate that young children may
 seek and use information selectively from other people on the basis of
 epistemic uncertainty. Tamis-LeMonda et al. (2008) extended the finding
-of Sorce et al. (Sorce et al., 1985) in order to determine whether
-children consider the expressions of their caregivers more when the
-safety of the environment is more uncertain versus when it is completely
-certain. In this study, researchers tested whether 18-month-old infants
-would walk down slopes of varying risk levels when given either
-encouraging or discouraging signals from their mothers. The researchers
-found that children tended to ignore their mothers' encouraging messages
-when faced with a slope that was clearly too steep to walk down safely,
-and similarly ignored mothers' discouraging messages when the slope was
+of Sorce et al. (1985) in order to determine whether children consider
+the expressions of their caregivers more when the safety of the
+environment is more uncertain versus when it is completely certain. In
+this study, researchers tested whether 18-month-old infants would walk
+down slopes of varying risk levels when given either encouraging or
+discouraging signals from their mothers. The researchers found that
+children tended to ignore their mothers' encouraging messages when faced
+with a slope that was clearly too steep to walk down safely, and
+similarly ignored mothers' discouraging messages when the slope was
 obviously safe. At borderline slopes, when it was unclear to infants
 whether the slope was safe to walk down or not, children tended to
 comply much more consistently with the encouragement or discouragement
@@ -486,64 +513,55 @@ complete certainty and complete ambiguity.
 
 It is unclear whether young children are sensitive to intermediate
 levels of epistemic uncertainty, but some research suggests that their
-capacity to monitor graded uncertainty may be limited. One body of
-research has shown that children over the age of 3 can report on states
-of complete ignorance or complete knowledge when asked about an object
-that is being hidden (e.g., Wimmer, Hogrefe, \& Perner, 1988), meaning
-that when they are asked if they know which object has been hidden, they
-can accurately report on their own knowledge state if they have seen the
-hiding event (complete certainty) or have not seen any objects at all
-(complete ignorance). However, children of the same age struggle in
-partial exposure tasks, in which they are shown two objects and told one
-of them will be hidden, but are not able to see which one ends up being
-hidden (Kloo \& Rohwer, 2012; Sodian \& Wimmer, 1987). In these
-situations, children tend to erroneously report that they know which
-object has been hidden, even though they had no visual access to the
-hiding event. Some studies, however, show that children as young as 2 or
-3 years old engage in spontaneous information-seeking when faced with
-ambiguity in partial exposure tasks (Call \& Carpenter, 2001; Kloo,
-Rohwer, \& Perner, 2017). In sum, while 3 to 6-year-old children
-struggle to demonstrate explicit or verbal reasoning about their own
-ignorance in partial exposure tasks, some studies demonstrate that
-children may engage in spontaneous information-gathering when they lack
-sufficient knowledge to make a decision.
-
-Morgan, Laland and Harris (2015) also investigated young children's
-sensitivity to graded uncertainty in a different paradigm. In their
-study, the researchers asked children between the ages of 3 and 7 to
+capacity to monitor graded uncertainty may be limited. Morgan, Laland
+and Harris (2015) asked children between the ages of 3 and 7 to
 determine which of two illustrated quantities was bigger; on some
 trials, the quantities were more similar to each other (i.e., the task
-was more difficult) than in other trials. The children then received
-feedback on their choice from a group of ten informants whose level of
-consensus was manipulated as an independent variable in the experiment.
-After receiving feedback the group of ten informants, children could
-either stick with their initial answer or change it. Children of all
-ages in the study seemed to be generally insensitive to their own
-uncertainty, evidenced by the fact that they tended to stick with their
-original answers regardless of the initial difficulty of the task. When
-they did switch their answers, however, children were more likely to
-switch to the choice of the group when consensus was high, especially
-among older children. Thus, although children seemed to not adjust their
-usage of social information when they faced a more ambiguous problem,
-they were sensitive to the graded strength of social information when
-they did decide to use it. This result may have been specific to the
-task at hand: this study measured children's awareness of graded
-uncertainty based on whether they were willing to break from their
-original choice, a metric which may underestimate children's
-metacognitive reasoning. Furthermore, the studies discussed above show
-that, even before they are able to report on graded levels of epistemic
-uncertainty explicitly, preschool-age children spontaneously seek
-information more often in situations of greater uncertainty. Building
-off these findings, the current study was uses a categorization paradigm
-to determine whether children's social information-gathering is driven
-by graded uncertainty.
+was more difficult) than in other trials. After receiving feedback on
+their choice, children could either stick with their initial answer or
+change it. Children of all ages in the study seemed to be generally
+insensitive to their own uncertainty, evidenced by the fact that they
+tended to stick with their original answers regardless of the initial
+difficulty of the task. A possible explanation for this result is that
+children may have more trouble showing sensitivity to graded uncertainty
+when doing so requires that they break from a decision they already
+committed to, as compared to engaging in other forms of spontaneous
+information-seeking.
+
+Another body of research has shown that children over the age of 3 can
+report on states of complete ignorance or complete knowledge when asked
+about an object that is being hidden (e.g., Wimmer, Hogrefe, \& Perner,
+1988), meaning that when they are asked if they know which object has
+been hidden, they can accurately report on their own knowledge state if
+they have seen the hiding event (complete certainty) or have not seen
+any objects at all (complete ignorance). However, children of the same
+age struggle in \emph{partial exposure tasks}, in which they are shown
+two objects and told one of them will be hidden, but are not able to see
+which one ends up being hidden (Kloo \& Rohwer, 2012; Sodian \& Wimmer,
+1987). In these situations, children tend to erroneously report that
+they know which object has been hidden, even though they had no visual
+access to the hiding event. Some studies, however, show that children as
+young as 2 or 3 years old engage in spontaneous information-seeking when
+faced with ambiguity in partial exposure tasks (Call \& Carpenter, 2001;
+Kloo, Rohwer, \& Perner, 2017).
+
+In sum, while 3 to 6-year-old children struggle to demonstrate explicit
+or verbal reasoning about their own ignorance in partial exposure tasks,
+some studies show that children may engage in spontaneous
+information-gathering when they lack sufficient knowledge to make a
+decision. This prior research leaves open the question of whether
+children engage in selective social-information gathering that reflects
+a sensitivity to graded uncertainty.
 
 \subsection{Current Study}\label{current-study}
 
-Children completed a category discrimination game in which they were
-introduced to two creatures, and told that each creature had a specific
-box that it was supposed to live in. They were then handed a number of
-images depicting creatures at various points on the perceptual continuum
+Building off the findings discussed above, the current study was uses a
+categorization paradigm to determine whether children's social
+information-gathering is driven by graded uncertainty. Children
+completed a category discrimination game in which they were introduced
+to two creatures, and told that each creature had a specific box that it
+was supposed to live in. They were then handed a number of images
+depicting creatures at various points on the perceptual continuum
 between the two prototype images to which they had initially been
 exposed, and were asked to put each creature in its correct box. The
 critical dependent measure was the duration of children's looks to the
@@ -593,7 +611,14 @@ interaction (Risko, Laidlaw, Freeth, Foulsham, \& Kingstone, 2012). One
 study in particular suggests that merely the potential for social
 interaction that exists with a live partner draws social gaze more than
 video images of the same social partner (K. E. Laidlaw, Foulsham, Kuhn,
-\& Kingstone, 2011).
+\& Kingstone, 2011). A separate line of research also shows that
+children learn more effectively when interacting with a social partner
+whose actions are contingent on the child's actions, as compared to
+watching a video of a person acting as a teacher (Roseberry,
+Hirsh-Pasek, \& Golinkoff, 2014; Troseth, Saylor, \& Archer, 2006). As a
+result, it may be that children shift gaze to a socially contingent
+partner in a different way than they would to a prerecorded social
+partner who does not actually interact with the child.
 
 Despite the methodological challenges associated with live eye tracking,
 its use with children and infants is not unprecedented. This technique
@@ -612,23 +637,49 @@ than the gaze of their mother.
 
 In sum, since prior research indicated that such a live eye-tracking
 approach was possible, and since using an eye tracker decreases the
-potential for human error involved in hand-coding, I measured gaze
-shifts to a real-life social partner.
+potential for human error involved in hand-coding, I used an
+eye-tracking setup to measure gaze shifts to an in-person social
+partner.
 
 \section{Methods}\label{methods}
 
+\subsection{Pilot Testing}\label{pilot-testing}
+
+I developed the experimental procedure descibed below over a 5-week
+pilot testing period. During this period, I recruited 40 child
+participants at the Children's Discovery Museum in San Jose, CA who
+participated in various preliminary versions of the task. The primary
+purpose of pilot testing was to arrive at a version of the test that (a)
+showed levels of accuracy on the task that indicated differential levels
+of uncertainty for children during the task, and (b) kept children
+engaged and was enjoyable to them. Several facets of the experimental
+design were adjusted throughout the pilot-testing process, including the
+color of the stimuli, the number of trials, the presenation of
+motivational rewards (stickers) throughout the task, and whether
+children had visual access to prototype images of stimuli they were
+being asked to categorized.
+
 \subsection{Participants}\label{participants}
 
-I recruited a sample of 30 children aged 3 to 5 at the Bing Nursery
-School at Stanford University in Stanford, CA. Children were asked by
-the experimenter if they wanted to play a short game during their
-regularly scheduled free-play. Children were predominantly white and
-Asian and generally had highly-educated parents. All children were
-tested by the same experimenter and were randomly assigned to one of
-four counterbalance conditions.
+I recruited a sample of 30 children aged 3 to 5 years (mean age = 4.61)
+at the Bing Nursery School at Stanford University in Stanford, CA.
+Children were asked by the experimenter if they wanted to play a short
+game during their regularly scheduled free-play. Children were
+predominantly white and Asian and generally had highly-educated parents.
+All children were tested by the same experimenter and were randomly
+assigned to one of four counterbalance conditions.
 
 \subsection{Stimuli, Design and
 Procedure}\label{stimuli-design-and-procedure}
+
+\begin{figure}
+
+{\centering \includegraphics[width=4.91in]{../images/stimuli} 
+
+}
+
+\caption{Stimulus sets provided to children. Images on the ends of the spectrums are prototypes which morph into each other an a perceptual continuum.}\label{fig:stimuli}
+\end{figure}
 
 \subsubsection{a) Stimuli.}\label{a-stimuli.}
 
@@ -642,37 +693,8 @@ color, we transformed them to be monochromatic blue (Figure
 \ref{fig:stimuli}). The images were printed and laminated to make
 rectangular cards that children could insert into one of the two boxes.
 
-\begin{figure}
-
-{\centering \includegraphics[width=4.27in]{../images/stimuli} 
-
-}
-
-\caption{Stimulus sets provided to children. Images on the ends of the spectrums are prototypes which morph into each other an a perceptual continuum.}\label{fig:stimuli}
-\end{figure}
-
 \subsubsection{b) Experimental Setup and Eye-tracking
 Mechanism.}\label{b-experimental-setup-and-eye-tracking-mechanism.}
-
-Children were seated in a small chair in front of a table which
-contained two boxes, one red and one green, both placed within their
-reach. The boxes had openings in the lids to allow children to deposit
-the stimulus cards into them. When children entered the room, they sat
-across an X-centimeter-wide table from a large poster-board which
-displayed the images for the eye-tracking calibration procedure. After
-the calibration phase had ended and the experimental trials began, the
-poster-board was replaced with the experimenter sitting in a chair
-across the table from the child.
-
-I used an SMI REDn corneal reflection eye-tracker to measure children's
-gaze shifts to the experimenter throughout the task. The eye-tracking
-device was placed on two magnetic mounts in the middle of the table,
-approximately X centimeters in front of the child and set an angle of X
-degrees to the child's face. Critically, the eye-tracker in this case
-was measuring the child's gaze shifts to the face of a real person
-instead of an image on a screen. The child's field of vision was
-captured by an external-viewing webcam situated directly behind and
-slightly above the child's head.
 
 \begin{figure}
 \centering
@@ -682,35 +704,55 @@ eye-tracker across the table recorded gaze shifts to the experimenter
 throughout the task.}
 \end{figure}
 
+Children were seated in a small chair in front of a table which
+contained two boxes, one red and one green, both placed within their
+reach (Figure \ref{fig:setup}). The boxes had openings in the lids to
+allow children to deposit the stimulus cards into them. When children
+entered the room, they sat across a 60-centimeter-wide table from a
+large poster-board which displayed the images for the eye-tracking
+calibration procedure. After the calibration phase had ended and the
+experimental trials began, the poster-board was replaced with the
+experimenter sitting in a chair across the table from the child.
+
+I used an SMI REDn corneal reflection eye-tracker to measure children's
+gaze shifts to the experimenter throughout the task. The eye-tracking
+device was placed on two magnetic mounts in the middle of the table,
+approximately 58 centimeters in front of the child . The child's field
+of vision was captured by an external-viewing webcam situated directly
+behind and slightly above the child's head.
+
 \begin{figure}
 \centering
 \includegraphics{../images/calibration.jpg}
-\caption{\label{fig:calibration}Calibration images.}
+\caption{\label{fig:calibration}Calibration display. During the calibration
+phase, children were directed to look at each image as the experimenter
+approved each calibration point one by one.}
 \end{figure}
 
 \subsubsection{c) Calibration.}\label{c-calibration.}
 
 Children were directed to look at each of the 5 calibration images on
-the poster-boarded situated across the table from them while the
-experimenter approved each point one-by-one. The calibration display
-consisted of a large white poster board with five cartoon images (a
-smiling star, a puppy, a blue fish, a flower, and a red apple) as
-illustrated in Figure \ref{fig:calibration}. After the experimenter had
+the poster-board situated across the table from them while the
+experimenter approved each point one-by-one (Figure
+\ref{fig:calibration}). The calibration display consisted of a large
+white poster board with five cartoon images: a smiling star, a puppy, a
+blue fish, a flower, and a red apple. After the experimenter had
 approved each calibration point, the child was asked to follow the
 experimenter's finger as it moved across the calibration display while
 the experimenter checked to see whether the eye-tracker was accurately
 representing the gaze location of the child. If the experimenter deemed
 this informal test of calibration accuracy to be sufficient, the
-experiment continued; if not, calibration was repeated. (Limitations of
-this sort of accuracy check are addressed in the Discussion).
+experiment continued; if not, calibration was repeated.
 
 \subsubsection{d) Procedure.}\label{d-procedure.}
 
-Upon entering, children were first asked to write their name on a
-sticker chart that would be used throughout the task to keep them
-motivated and prevent them from getting fatigued during the experiment,
-which lasted about 12 minutes. After they had written their name, the
-calibration phase began.
+Upon entering, I introduced children to a \enquote{sticker chart} that
+would be used throughout the task to keep them motivated and prevent
+them from getting fatigued during the experiment, which lasted about 12
+minutes. Each child was asked if they preferred to write their name or
+whether they wanted my help in doing so; this introductory sequence was
+used as an opportunity to build rapport with each individual child.
+After the name was written on the chart, the calibration phase began.
 
 Once the calibration phase was finished, the experimenter removed the
 poster board and sat across from the child. The experimenter then
@@ -904,10 +946,10 @@ Empirical evidence also suggested that children may possess some
 sensitivity to graded evidence and intermediate levels of uncerainty in
 the environment, in such contexts as \enquote{partial exposure} tasks
 (Call \& Carpenter, 2001; Kloo et al., 2017) and word learning
-situations (Hembacher \& Frank, n.d.). Thus, I hypothesized that
-children would show a looking pattern that would indicate sensitivity to
-graded uncertainty, and would selectively seek more social information
-on trials in which they were tasked with categorizing more ambiguous
+situations (Hembacher et al., 2017). Thus, I hypothesized that children
+would show a looking pattern that would indicate sensitivity to graded
+uncertainty, and would selectively seek more social information on
+trials in which they were tasked with categorizing more ambiguous
 stimuli.
 
 Contrary to my hypothesis, I found that children did not differentiate
@@ -925,7 +967,7 @@ beginning of each experimental block (morph level 100). This result is
 particularly striking given that children were significantly less
 accurate in categorizing more ambiguous items, indicating that task
 difficulty was not uniform across trials. This finding contrasts that of
-Hembacher, deMayo, and Frank (n.d.), who found that, in a word-learning
+Hembacher, deMayo, and Frank (2017), who found that, in a word-learning
 task, children's social information gathering was closely linked to
 referential ambiguity. What might be the origin of the discrepancy
 between these two findings?
@@ -966,7 +1008,7 @@ of category ambiguity on children's social gaze patterns.
 
 Additionally, it is not possible to know with complete certainty what
 type of information children were seeking or expecting when they shifted
-their gaze to the experimenter. We operate under the assumption that
+their gaze to the experimenter. I operate under the assumption that
 children's foremost reason for looking was a search for disambiguating
 information, but children may also have looked at the experimenter
 because they were expecting a certain action (i.e., being handed the
@@ -1054,6 +1096,10 @@ Akechi, H., Senju, A., Uibo, H., Kikuchi, Y., Hasegawa, T., \& Hietanen,
 J. K. (2013). Attention to eye contact in the west and east: Autonomic
 responses and evaluative ratings. \emph{PLoS One}, \emph{8}(3), e59312.
 
+\hypertarget{ref-baldwin1991infants}{}
+Baldwin, D. A. (1991). Infants' contribution to the achievement of joint
+reference. \emph{Child Development}, \emph{62}(5), 874--890.
+
 \hypertarget{ref-call2001apes}{}
 Call, J., \& Carpenter, M. (2001). Do apes and children know what they
 have seen? \emph{Animal Cognition}, \emph{3}(4), 207--220.
@@ -1124,14 +1170,14 @@ Havy, M., \& Waxman, S. R. (2016). Naming influences 9-month-olds'
 identification of discrete categories along a perceptual continuum.
 \emph{Cognition}, \emph{156}, 41--51.
 
-\hypertarget{ref-hembacherchildren}{}
-Hembacher, E., \& Frank, M. C. (n.d.). Children's social referencing
-reflects sensitivity to graded uncertainty.
-
 \hypertarget{ref-hembacher2014don}{}
 Hembacher, E., \& Ghetti, S. (2014). Don't look at my answer: Subjective
 uncertainty underlies preschoolers' exclusion of their least accurate
 memories. \emph{Psychological Science}, \emph{25}(9), 1768--1776.
+
+\hypertarget{ref-hembacherchildren}{}
+Hembacher, E., deMayo, B., \& Frank, M. C. (2017). Children's social
+referencing reflects sensitivity to graded uncertainty.
 
 \hypertarget{ref-hornik1987effects}{}
 Hornik, R., Risenhoover, N., \& Gunnar, M. (1987). The effects of
@@ -1211,6 +1257,11 @@ Robinson, E., Haigh, S., \& Pendle, J. (2008). Children's working
 understanding of the knowledge gained from seeing and feeling.
 \emph{Developmental Science}, \emph{11}(2), 299--305.
 
+\hypertarget{ref-roseberry2014skype}{}
+Roseberry, S., Hirsh-Pasek, K., \& Golinkoff, R. M. (2014). Skype me!
+Socially contingent interactions help toddlers learn language.
+\emph{Child Development}, \emph{85}(3), 956--970.
+
 \hypertarget{ref-sabbagh2001learning}{}
 Sabbagh, M. A., \& Baldwin, D. A. (2001). Learning words from
 knowledgeable versus ignorant speakers: Links between preschoolers'
@@ -1246,6 +1297,11 @@ Tamis-LeMonda, C. S., Adolph, K. E., Lobo, S. A., Karasik, L. B., Ishak,
 S., \& Dimitropoulou, K. A. (2008). When infants take mothers' advice:
 18-month-olds integrate perceptual and social information to guide motor
 action. \emph{Developmental Psychology}, \emph{44}(3), 734.
+
+\hypertarget{ref-troseth2006young}{}
+Troseth, G. L., Saylor, M. M., \& Archer, A. H. (2006). Young children's
+use of video as a source of socially relevant information. \emph{Child
+Development}, \emph{77}(3), 786--799.
 
 \hypertarget{ref-vaish2011thirteen}{}
 Vaish, A., Demir, Ö. E., \& Baldwin, D. (2011). Thirteen-and
