--- a/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
+++ b/analysis/soc_ref_category_paper/soc_ref_category_bib.bib
@@ -206,8 +206,9 @@
 }
 
 @Article{hembacherchildren,
-  author = {Hembacher, Emily and Frank, Michael C},
+  author = {Hembacher, Emily and deMayo, Benjamin and Frank, Michael C},
   title  = {Children’s social referencing reflects sensitivity to graded uncertainty},
+  year   = {2017},
 }
 
 @Article{sodian2012metacognition,
@@ -612,6 +613,39 @@
   number    = {2},
   pages     = {160--170},
   publisher = {Elsevier},
+}
+
+@Article{baldwin1991infants,
+  author    = {Baldwin, Dare A},
+  title     = {Infants' contribution to the achievement of joint reference},
+  journal   = {Child development},
+  year      = {1991},
+  volume    = {62},
+  number    = {5},
+  pages     = {874--890},
+  publisher = {Wiley Online Library},
+}
+
+@Article{troseth2006young,
+  author    = {Troseth, Georgene L and Saylor, Megan M and Archer, Allison H},
+  title     = {Young children's use of video as a source of socially relevant information},
+  journal   = {Child Development},
+  year      = {2006},
+  volume    = {77},
+  number    = {3},
+  pages     = {786--799},
+  publisher = {Wiley Online Library},
+}
+
+@Article{roseberry2014skype,
+  author    = {Roseberry, Sarah and Hirsh-Pasek, Kathy and Golinkoff, Roberta M},
+  title     = {Skype me! Socially contingent interactions help toddlers learn language},
+  journal   = {Child development},
+  year      = {2014},
+  volume    = {85},
+  number    = {3},
+  pages     = {956--970},
+  publisher = {Wiley Online Library},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
